# MailingService

./: .env_sample  Dockerfile  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_01_29_2126-4c0698266b49_add_table_mailing.py
src/: config.py  crud.py  database.py  exceptions.py  main.py  models.py  project_celery.py  tasks.py
src/includes/: logging.py
src/mailing/: constants.py  crud.py  models.py  router.py  schemas.py  services.py  utilities.py
