[tool.poetry]
name = "mailingservice"
version = "0.1.0"
description = ""
authors = ["Albert Minnibaev <albert.minnibaeff@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.7"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
aiortc = "^1.9.0"
asyncpg = "^0.30.0"
opencv-python = "^4.10.0.84"
pillow = "^11.0.0"
pytest = "^8.3.3"
alembic = "^1.14.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.3.0"
httpx = "^0.28.1"
loguru = "^0.7.3"
fastapi-mail = "^1.4.2"
redis = "^5.2.1"
pytest-asyncio = "^0.25.2"
aiohttp = "^3.11.11"
celery = "^5.4.0"
flower = "^2.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
exclude = [
    ".git",
    "__pycache__",
    "migration"
]
extend-ignore = [
    "E501"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"